tests/ui/impl-trait/normalize-tait-in-const.stderr
error[E0493]: destructor of `F` cannot be evaluated at compile-time
  --> $DIR/normalize-tait-in-const.rs:25:79
   |
LL | const fn with_positive<F: ~const for<'a> Fn(&'a Alias<'a>) + ~const Destruct>(fun: F) {
   |                                                                               ^^^ the destructor for this type cannot be evaluated in constant functions
LL |     fun(filter_positive());
LL | }
   | - value is dropped here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0493`.
